splashpage flicker bug

--- a/slider/java.css
+++ b/slider/java.css
@@ -25,7 +25,7 @@
     }
 
 .content{
-    visibility: hidden;
+    display: none;
 }
 .contentBody{
     margin:0 5em;
